--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles that sum to a Fibonacci 井口 touch, they <strong>merge into one!</strong>
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with that sum to a Fibonacci 井口 touch, they <strong>merge into one!</strong>
     </p>
     <hr>  
     <div class="style-switcher" style="display:none;">
