--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <hr>
     </div>
     <p>
-    Yet another ripoff of <a href="http://gabrielecirulli.github.io/2048/">2048</a> by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Yet another ripoff of <a href="https://thereal23.github.io/2584">2584</a> by <a href="https://thereal23.github.io/590295810358705700000" target="_blank">TheReal23.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
   <script src="js/animframe_polyfill.js"></script>
